JSW Devsb/src/objects/Order_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Code/Depot Code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Requests</relationshipLabel>
        <relationshipName>Order_Bookings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <label>Address3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Tax_Class__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Alt Tax Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_No__c</fullName>
        <label>Contract No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracts</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>Order__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Order__c.SO_Type__c</field>
                <operation>equals</operation>
                <value>YQC</value>
            </filterItems>
            <filterItems>
                <field>Order__c.Month_Of_STO_Date__c</field>
                <operation>equals</operation>
                <valueField>$Source.Month_Of_Date__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Requests</relationshipLabel>
        <relationshipName>Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <formula>LEFT(RIGHT(text( CreatedDate),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Available__c</fullName>
        <label>Credit Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Outstanding__c</fullName>
        <label>Credit Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Overdue__c</fullName>
        <label>Credit Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <label>Customer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Nmae__c</fullName>
        <formula>Account__r.Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Description__c</fullName>
        <label>Distribution Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Description__c</fullName>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INC_Name__c</fullName>
        <formula>INC__r.Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>INC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Business_Partner__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>MMC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipLabel>Order Requests (INC)</relationshipLabel>
        <relationshipName>Order_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inco_Terms__c</fullName>
        <label>Inco Terms</label>
        <picklist>
            <picklistValues>
                <fullName>FOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EX</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MMCCode__c</fullName>
        <formula>MMCName__r.SAP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMCName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MMC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Business_Partner__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>MMC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipLabel>Order Requests (MMC)</relationshipLabel>
        <relationshipName>Order_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_Of_Date__c</fullName>
        <label>Month Of Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Request_Header__c</fullName>
        <externalId>true</externalId>
        <label>Order Request Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Type</label>
        <referenceTo>Order_Type__c</referenceTo>
        <relationshipLabel>Order Requests</relationshipLabel>
        <relationshipName>Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type_Name__c</fullName>
        <formula>Order_Type1__r.Order_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>YQC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YORF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YCOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEXC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YFCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YSEZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YNFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YGBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YGB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YCL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oreder_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plant_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Master</label>
        <referenceTo>Plant_Master__c</referenceTo>
        <relationshipLabel>Order Requests</relationshipLabel>
        <relationshipName>Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Po_Number__c</fullName>
        <label>Po Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesDistrictShipto__c</fullName>
        <label>ship To Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <label>Customer Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Employee__c</fullName>
        <label>Sales Employee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter_Name__c</fullName>
        <formula>Sales_Promotor__r.SAP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Promoter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promotor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Promotor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Business_Partner__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Sales_Promoters</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipLabel>Order Requests</relationshipLabel>
        <relationshipName>Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sap_No__c</fullName>
        <label>Sap No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satus_Message__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party_Nmae__c</fullName>
        <formula>Ship_To_Party__r.Sold_to_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Party code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Party</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Ship_To_Party__c.Sales_District__c</field>
                <operation>equals</operation>
                <valueField>Ship_To_Party__c.Account__r.Sales_District__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ship_To_Party__c</referenceTo>
        <relationshipLabel>Order Requests</relationshipLabel>
        <relationshipName>Order_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Code__c</fullName>
        <label>Ship to Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Address__c</fullName>
        <label>Shipment Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipment_Type__c</fullName>
        <label>Shipment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Y1-Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y2-Bulker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y3-Loose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y4-Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y5-Eight Wheel Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y6-Octrai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>So_Number__c</fullName>
        <label>So Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubDealer_Name__c</fullName>
        <formula>Sub_Dealer__r.Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubDealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Business_Partner__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Sub_Dealers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipLabel>Order Requests (Sub Dealer)</relationshipLabel>
        <relationshipName>Order_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <label>Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>VAT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Order Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Division__c</columns>
        <columns>Distribution_Channel__c</columns>
        <columns>So_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OR-{0000000000}</displayFormat>
        <label>Order Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Requests</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Lock</fullName>
        <active>true</active>
        <label>Record Lock</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>